--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -19,7 +19,7 @@ publish_to: 'none' # Remove this line if you wish to publish to pub.dev
 version: 1.0.0+1
 
 environment:
-  sdk: '>=2.19.6 <3.0.0'
+  sdk: '>=3.8.0 <4.0.0'
 
 # Dependencies specify other packages that your package needs in order to work.
 # To automatically upgrade your package dependencies to the latest versions
@@ -30,7 +30,8 @@ environment:
 dependencies:
   flutter:
     sdk: flutter
-
+  flutter_localizations:
+    sdk: flutter
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.2
@@ -38,7 +39,8 @@ dependencies:
   firebase_auth: ^5.7.0
   csv: ^5.0.0
   flutter_riverpod: ^2.5.1 # or latest
-
+  syncfusion_flutter_datepicker: ^30.1.41
+  google_fonts: ^6.2.1 # Check pub.dev for the latest version
 dev_dependencies:
   flutter_test:
     sdk: flutter
