--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -41,6 +41,8 @@ dependencies:
   flutter_riverpod: ^2.5.1 # or latest
   syncfusion_flutter_datepicker: ^30.1.41
   google_fonts: ^6.2.1 # Check pub.dev for the latest version
+  intl: ^0.20.2
+
 dev_dependencies:
   flutter_test:
     sdk: flutter
