feat(hotel-search): implement HotelSearchController with immutable state handling
- Created HotelSearchState model with default values
- Added HotelSearchController using StateNotifier
- Set up hotel_search_provider.dart for state access
- Wired controller into hotel_search_panel.dart

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -68,7 +68,7 @@ flutter:
   assets:
     - assets/images/chat.png
     - assets/data/airports.csv
-
+    - assets/data/hotels.csv
   #   - images/a_dot_ham.jpeg
 
   # An image asset can refer to one or more resolution-specific "variants", see
