--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -42,6 +42,7 @@ dependencies:
   syncfusion_flutter_datepicker: ^30.1.41
   google_fonts: ^6.2.1 # Check pub.dev for the latest version
   intl: ^0.20.2
+  collection: ^1.17.2
 
 dev_dependencies:
   flutter_test:
