--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -46,6 +46,7 @@ dependencies:
   geolocator: ^10.1.0 # use the latest version
   geocoding: ^2.1.1
   flutter_switch: ^0.3.2
+  http: ^1.1.0
 
 dev_dependencies:
   flutter_test:
