--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -47,6 +47,8 @@ dependencies:
   geocoding: ^2.1.1
   flutter_switch: ^0.3.2
   http: ^1.1.0
+  shimmer: ^3.0.0
+  flutter_spinkit: ^5.2.0
 
 dev_dependencies:
   flutter_test:
