feat: add Poppins font files and apply custom font theme
- Added poppins_regular.ttf and poppins_bold.ttf to assets/fonts/
- Updated pubspec.yaml to register custom fonts
- Modified app_theme.dart to use Poppins via GoogleFonts
- Minor UI updates in flight/hotel search panels and controllers

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -105,3 +105,8 @@ flutter:
   #
   # For details regarding fonts from package dependencies,
   # see https://flutter.dev/custom-fonts/#from-packages
+  fonts:
+    - family: Poppins
+      fonts:
+        - asset: assets/fonts/poppins_regular.ttf
+        - asset: assets/fonts/poppins_bold.ttf
