style: apply lint rules and auto-format across Dart files
- Added explicit type annotations per `always_specify_types`
- Marked local variables and fields as `final` where applicable
- Applied `prefer_const_constructors` to widget constructors
- Updated `analysis_options.yaml` with stricter lint rules
- Ran auto-fix to update all affected files in `lib/`

--- a/analysis_options.yaml
+++ b/analysis_options.yaml
@@ -1,1 +1,12 @@
 include: package:flutter_lints/flutter.yaml
+
+linter:
+  rules:
+    always_specify_types: true
+    avoid_dynamic_calls: true
+    avoid_types_on_closure_parameters: false
+    prefer_final_locals: true
+    prefer_final_fields: true
+    prefer_const_constructors: true
+    unnecessary_late: true
+    unnecessary_nullable_for_final_variable_declarations: true
