--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -50,8 +50,13 @@ dependencies:
   shimmer: ^3.0.0
   flutter_spinkit: ^5.2.0
   modal_bottom_sheet: ^3.0.0
+  freezed_annotation: ^2.4.1
+  json_annotation: ^4.8.1
 
 dev_dependencies:
+  build_runner: ^2.4.6
+  freezed: ^2.4.1
+  json_serializable: ^6.7.1
   flutter_test:
     sdk: flutter
 
