--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -53,6 +53,8 @@ dependencies:
   freezed_annotation: ^2.4.1
   json_annotation: ^4.8.1
   auto_size_text: ^3.0.0
+  confetti: ^0.7.0
+  
 dev_dependencies:
   build_runner: ^2.4.6
   freezed: ^2.4.1
