--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -54,7 +54,9 @@ dependencies:
   json_annotation: ^4.8.1
   auto_size_text: ^3.0.0
   confetti: ^0.7.0
-  
+  flutter_map: ^6.1.0
+  latlong2: ^0.9.0
+
 dev_dependencies:
   build_runner: ^2.4.6
   freezed: ^2.4.1
