feat: implement Home menu layout and navigation
- Built HomeScreen UI with horizontal destination chips, promo box, and deals section
- Added styled containers, shadows, and image placeholders
- Hooked Home menu to MenuScreen navigation

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -87,6 +87,12 @@ flutter:
     - assets/data/airports.csv
     - assets/data/hotels.csv
     - assets/data/cars.csv
+    - assets/images/hotel_1.webp
+    - assets/images/hotel_2.webp
+    - assets/images/hotel_3.webp
+    - assets/images/room_1.jpg
+    - assets/images/room_2.jpg
+    - assets/images/room_3.webp
 
   #   - images/a_dot_ham.jpeg
 
