feat(frontend): booking flow + listener hygiene - Add BookingApiService.createBooking() (Firebase ID token auth) - Controller.createBooking() wiring + payload from state - Fix ConsumerState: move ref.watch → build; listen in initState - Add clear helpers (dates/airports/pax/all) and guarded setters - Add searchNonce trigger; normalize arrival code setters

--- a/analysis_options.yaml
+++ b/analysis_options.yaml
@@ -1,5 +1,9 @@
 include: package:flutter_lints/flutter.yaml
 
+analyzer:
+  errors:
+    invalid_annotation_target: ignore  # 🔥 Ignore bogus JsonKey warnings
+
 linter:
   rules:
     always_specify_types: true
