--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -56,14 +56,14 @@ dependencies:
   confetti: ^0.7.0
   flutter_map: ^6.1.0
   latlong2: ^0.9.0
-
+  flutter_gen: ^5.11.0
+  shared_preferences: ^2.2.2
 dev_dependencies:
   build_runner: ^2.4.8
   freezed: ^2.4.1
   json_serializable: ^6.9.0
   flutter_test:
     sdk: flutter
-
   # The "flutter_lints" package below contains a set of recommended lints to
   # encourage good coding practices. The lint set provided by the package is
   # activated in the `analysis_options.yaml` file located at the root of your
@@ -80,7 +80,7 @@ flutter:
   # included with your application, so that you can use the icons in
   # the material Icons class.
   uses-material-design: true
-
+  generate: true
   # To add assets to your application, add an assets section, like this:
   assets:
     - assets/images/chat.png
