--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -58,6 +58,8 @@ dependencies:
   latlong2: ^0.9.0
   flutter_gen: ^5.11.0
   shared_preferences: ^2.2.2
+  dynamic_color: ^1.7.0
+  
 dev_dependencies:
   build_runner: ^2.4.8
   freezed: ^2.4.1
@@ -93,7 +95,7 @@ flutter:
     - assets/images/room_1.jpg
     - assets/images/room_2.jpg
     - assets/images/room_3.webp
-
+    - assets/images/logo.png
   #   - images/a_dot_ham.jpeg
 
   # An image asset can refer to one or more resolution-specific "variants", see
