feat: login screen design
- Added new login screen layout
- Implemented email & password fields with validation
- Integrated FirebaseAuth instance for login flow
- Added password visibility toggle and form validation

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -95,7 +95,7 @@ flutter:
     - assets/images/room_1.jpg
     - assets/images/room_2.jpg
     - assets/images/room_3.webp
-    - assets/images/logo.png
+    - assets/images/cloud.jpg
   #   - images/a_dot_ham.jpeg
 
   # An image asset can refer to one or more resolution-specific "variants", see
